--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/ConnorDY/TCGPear#readme",
   "dependencies": {
     "jquery": "^3.3.1",
+    "lodash": "^4.17.5",
     "react": "^16.2.0",
     "react-dom": "^16.2.0"
   },
